# PAIA-test

./: .gitignore  AGENTS.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml  streamlit_app.py
app/: main.py  schemas.py  utils.py
app/api/: dependencies.py  routes.py
app/core/: config.py
app/db/: __init__.py  models.py  session.py
app/services/: __init__.py  llm.py  memory.py
