[build-system]
requires = ["setuptools>=62", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "llamaindex-chatbot"
version = "0.1.0"
description = "FastAPI chatbot with LlamaIndex and PostgreSQL"
readme = "README.md"
authors = [{name = "PAIA", email = "dev@example.com"}]
requires-python = ">=3.11"
dependencies = [
    "fastapi",
    "uvicorn[standard]",
    "sqlalchemy[asyncio]",
    "asyncpg",
    "pydantic>=2.0",
    "pydantic-settings",
    "llama-index>=0.10.0",
    "openai>=1.0.0",
    "google-generativeai",
    "python-dotenv",
    "streamlit",
    "httpx",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-asyncio",
    "ruff",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]
